--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="keywords" content="UX,Designer,Portfolio,Angas,Smith">
 		<meta name="author" content="Angas Smith">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-		<meta name="description" content="I&#39;m Angas Smith! I create visual and interactive media for the people of the internet.">
+		<meta name="description" content="I&#39;m Angas Smith! I'm a User Experience Designer. I like to work on games/web/mobile.">
 		<meta property="og:image" content="/images/thumb.jpg">
 		<link rel="icon" type="image/jpg" href="">
 
@@ -29,16 +29,15 @@
 	<body>
 
 		<div class="navbar">
-					<a href="" ng-click="setNews()"ng-class="newsactive" >Angas Smith</a>
+				<h1>	<a href="" ng-click="setNews()"ng-class="newsactive" >ANGAS SMITH</a></h1>
 				<span class="buttons">
-					<button id="Graphic" ng-click="setAbout()" ng-class="aboutactive" class="fa fa-question w3-xxlarge"> Graphic</button>
-					<button id="UI/UX" ng-click="setFAQ()" ng-class="faqactive" class="fa fa-info w3-xxlarge"> UI/UX</button>
-					<button id="Character" ng-click="setNews()" ng-class="newsactive" class="fa fa-home w3-xxlarge"> Character</button>
+					<button id="Graphic" ng-click="setAbout()" ng-class="aboutactive" > graphic</button>
+					<button id="UI/UX" ng-click="setFAQ()" ng-class="faqactive" > ui/ux</button>
+					<button id="Character" ng-click="setNews()" ng-class="newsactive" > character</button>
 				</span>
 		</div>
 
 		<div class="bio">
-
 			<a href="index.html" alt="Angas Smith"><img id="av" class="logo" src="images/av2.svg" /></a>
 
 			<div class="biotext">Hi, I'm Angas Smith!<br> I'm a User Experience Designer <br> I like to work on games/web/mobile <br>
@@ -49,7 +48,16 @@
 			<div class="navbox">
 				<a href="https://www.linkedin.com/in/angas-smith-002822120"><img src="images/01.png"></a>
 			</div>
+		</div>
 
+		<div class="toolkit">
+			<h1> My Toolkit </h1><br><br><br><br>
+			<p> I like to utilise the Design Thinking and I am also a Scrum Master.
+					I have recently completed a Bachelor of Design and Technology Innovation (Computer Science) <br><br></p>
+		</div>
+
+		<div class="resume">
+			<button> Download Résumé </button>
 		</div>
 
 		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
