--- a/index.html
+++ b/index.html
@@ -54,14 +54,31 @@
 			<h1> My Toolkit </h1><br><br><br><br>
 			<p> I like to utilise the Design Thinking and I am also a Scrum Master.
 					I have recently completed a Bachelor of Design and Technology Innovation (Computer Science) <br><br></p>
+			<div class="parenttools">
+				<ul><h2>Technical</h2>
+					<li>HTML/CSS
+					<li>JS
+					<li>Flutter/Dart
+					<li>ServiceNow
+				</ul>
+				<ul><h2>Design</h2>
+					<li> TEST
+					<li> TEST
+					<li> TEST
+					<li> TEST
+				</ul>
+			</div>
 		</div>
 
-		<div class="resume">
-			<button> Download Résumé </button>
+		<div class="categories">
+			<div id="category"> graphic </div>
+			<div id="category"> ui/ux</div>
+			<div id="category"> character </div>
 		</div>
-
-		<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	</body>
 
+	<div class="resume">
+		<button> Download Résumé </button>
+	</div>
 
 </html>
