--- a/index.html
+++ b/index.html
@@ -62,18 +62,18 @@
 					<li>ServiceNow
 				</ul>
 				<ul><h2>Design</h2>
-					<li> TEST
-					<li> TEST
-					<li> TEST
-					<li> TEST
+					<li> XD/Illustrator/Photoshop
+					<li> Unity
+					<li> Blender
+					<li> Zbrush
 				</ul>
 			</div>
 		</div>
 
 		<div class="categories">
-			<div id="category"> graphic </div>
-			<div id="category"> ui/ux</div>
-			<div id="category"> character </div>
+			<button id="category"> graphic </button>
+			<button id="category"> ui/ux </button>
+			<button id="category"> character </button>
 		</div>
 	</body>
 
