--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
 		</div>
 
 		<div class="toolkit">
-			<h1> My Toolkit </h1><br><br><br><br>
+			<h1> My Toolkit </h1><br>
 			<p> I like to utilise the Design Thinking and I am also a Scrum Master.
 					I have recently completed a Bachelor of Design and Technology Innovation (Computer Science) <br><br></p>
 			<div class="parenttools">
-				<ul><h2>Technical</h2>
+				<ul><h2><u>Technical</u></h2>
 					<li>HTML/CSS
 					<li>JS
 					<li>Flutter/Dart
 					<li>ServiceNow
 				</ul>
-				<ul><h2>Design</h2>
+				<ul><h2><u>Design</u></h2>
 					<li> XD/Illustrator/Photoshop
 					<li> Unity
 					<li> Blender
@@ -71,14 +71,15 @@
 		</div>
 
 		<div class="categories">
-			<button id="category"> graphic </button>
-			<button id="category"> ui/ux </button>
-			<button id="category"> character </button>
+			<button id="category">  </button> graphics
+			<button id="category">  </button> ui/ux
+			<button id="category">  </button> character
 		</div>
 	</body>
 
 	<div class="resume">
 		<button> Download Résumé </button>
+		<a href="./images/PlantAR_icon.png" download="Acme Documentation (ver. 2.0.1).txt">Download test</a>
 	</div>
 
 </html>
