--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
 		</div>
 	</body>
 
-	<div class="resume">
-		<button> Download Résumé </button>
-		<a href="./images/PlantAR_icon.png" download="Acme Documentation (ver. 2.0.1).txt">Download test</a>
+	<div class="resumecontainer" >
+		<a href="./images/PlantAR_icon.png" download="AngasSmith_resume" class="resume"> Download Résumé</a>
 	</div>
 
 </html>
