--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<body>
 
 		<div class="navbar">
-				<h1>	<a href="" ng-click="setNews()"ng-class="newsactive" >ANGAS SMITH</a></h1>
+				<h1>	<a href="" ng-click="setNews()"ng-class="newsactive" >ANGAS SMITH<br> <h4>user experience design</h4></a></h1>
 				<span class="buttons">
 					<button id="Graphic" ng-click="setAbout()" ng-class="aboutactive" > graphic</button>
 					<button id="UI/UX" ng-click="setFAQ()" ng-class="faqactive" > ui/ux</button>
@@ -71,7 +71,7 @@
 		</div>
 
 		<div class="categories">
-			<button id="category">  </button> graphics
+			<button id="category">  </button> graphic
 			<button id="category">  </button> ui/ux
 			<button id="category">  </button> character
 		</div>
