--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 		</div>
 
 		<div class="categories">
-			<button id="category">  </button> graphic
-			<button id="category">  </button> ui/ux
-			<button id="category">  </button> character
+			<button id="category" class="graphic">  </button> graphic
+			<button id="category" class="ux">  </button> ui/ux
+			<button id="category" class="character">  </button> character
 		</div>
 	</body>
 
