--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<a href="index.html" alt="Angas Smith"><img id="av" class="logo" src="images/" /></a>
 
 			<div class="biotext">Hi, I'm Angas Smith!<br> I'm a User Experience Designer <br> I like to work on games/web/mobile <br>
-				Currently designing <a href="google.com">stuff</a><br>
+				Currently designing at <a href="https://staff.flinders.edu.au/workplace-support/digital-services/service-one">flinders</a><br>
 				<a href="about.html">tell me more &#x21E2;</a>
 			</div>
 
@@ -68,6 +68,7 @@
 					<li> Zbrush
 				</ul>
 			</div>
+			<br>
 		</div>
 
 		<div class="categories">
