--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 		<div class="navbar">
 				<h1>	<a href="" ng-click="setNews()"ng-class="newsactive" >ANGAS SMITH<br> <h4>user experience design</h4></a></h1>
 				<span class="buttons">
-					<button id="Graphic" ng-click="setAbout()" ng-class="aboutactive" > graphic</button>
-					<button id="UI/UX" ng-click="setFAQ()" ng-class="faqactive" > ui/ux</button>
-					<button id="Character" ng-click="setNews()" ng-class="newsactive" > character</button>
+					<button id="Graphic" ng-click="setAbout()" ng-class="aboutactive" onclick="window.location.href = './contact.html';" > contact</button>
+					<button id="UI/UX" ng-click="setFAQ()" ng-class="faqactive" onclick="window.location.href = './projects.html';"> projects</button>
+					<button id="Character" ng-click="setNews()" ng-class="newsactive" onclick="window.location.href = './index.html';"> home</button>
 				</span>
 		</div>
 
@@ -41,12 +41,12 @@
 			<a href="index.html" alt="Angas Smith"><img id="av" class="logo" src="images/" /></a>
 
 			<div class="biotext">Hi, I'm Angas Smith!<br> I'm a User Experience Designer <br> I like to work on games/web/mobile <br>
-				Currently designing at <a href="https://staff.flinders.edu.au/workplace-support/digital-services/service-one">flinders</a><br>
-				<a href="about.html">tell me more &#x21E2;</a>
+				Currently designing at <a href="https://staff.flinders.edu.au/workplace-support/digital-services/service-one">flinders &#x21E2;</a><br>
 			</div>
 
 			<div class="navbox">
 				<a href="https://www.linkedin.com/in/angas-smith-002822120"><img src="images/01.png"></a>
+
 			</div>
 		</div>
 
@@ -71,15 +71,8 @@
 			<br>
 		</div>
 
-		<div class="categories">
-			<button id="category" class="graphic">  </button> graphic
-			<button id="category" class="ux">  </button> ui/ux
-			<button id="category" class="character">  </button> character
+		<div class="resumecontainer" >
+				<a href="./images/PlantAR_icon.png" download="AngasSmith_resume" class="resume"> download résumé</a>
 		</div>
-	</body>
-
-	<div class="resumecontainer" >
-		<a href="./images/PlantAR_icon.png" download="AngasSmith_resume" class="resume"> download résumé</a>
-	</div>
 
 </html>
