--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
 
     <div class="parent">
       <h1> Contact</h1>
-      <p1> At this point the best way to contact me is through my linkedin!</p1>
+      <p1> At this point, the best way to contact me is through my linkedin!</p1>
       <div class="navbox">
         <a href="https://www.linkedin.com/in/angas-smith-002822120"><img src="images/01.png"></a>
       </div>
