--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<h1>	<a href="" ng-click="setNews()"ng-class="newsactive" >ANGAS SMITH<br> <h4>user experience design</h4></a></h1>
 				<span class="buttons">
 					<button id="Graphic" ng-click="setAbout()" ng-class="aboutactive" onclick="window.location.href = './contact.html';" > contact</button>
-					<button id="UI/UX" ng-click="setFAQ()" ng-class="faqactive" onclick="window.location.href = './projects.html';"> projects</button>
+					<button id="UI/UX"  ng-click="setFAQ()" ng-class="faqactive" onclick="window.location.href = './projects.html';"> projects</button>
 					<button id="Character" ng-click="setNews()" ng-class="newsactive" onclick="window.location.href = './index.html';"> home</button>
 				</span>
 		</div>
@@ -52,8 +52,10 @@
 
 		<div class="toolkit">
 			<h1> My Toolkit </h1><br>
-			<p> I like to utilise the Design Thinking and I am also a Scrum Master.
-					I have recently completed a Bachelor of Design and Technology Innovation (Computer Science) <br><br></p>
+			<p> I am a proponent of User Experience like to utilise the Design Thinking.
+				 	I like to practise scrum and have completed scrum-master training.
+					I have recently completed a Bachelor of Design and Technology Innovation (Computer Science). <br>
+					My skillset sits somewhere between technical and design. <br><br></p>
 			<div class="parenttools">
 				<ul><h2><u>Technical</u></h2>
 					<li>HTML/CSS
