--- a/projects.html
+++ b/projects.html
@@ -39,17 +39,17 @@
 
 
 		<div class="categories">
-			<button id="category" id="one" class="projects one"> <div class="overlay" > Service One </div> </button>
+			<button id="category" id="one" class="projects one" style="background-image: url(./images/Catalogueone.png);"> <div class="overlay" > Service One </div> </button>
 
-      <button id="category" id="two" class="projects two"> <div class="overlay" > Knowious </div> </button>
+      <button id="category" id="two" class="projects two" style="background-image: url(./images/Knowious_1.png);"> <div class="overlay" > Knowious </div> </button>
 
-      <button id="category" class="projects one"> <div class="overlay"> Experience </div> </button>
+      <button id="category" class="projects one" style="background-image: url(./images/experience.png);"> <div class="overlay"> Experience </div> </button>
 
-      <button id="category" class="projects two"> <div class="overlay"> Escape the Probe </div> </button>
+      <button id="category" class="projects two" style="background-image: url(./images/ETP.png);"> <div class="overlay"> Escape the Probe </div> </button>
 
-      <button id="category" class="projects one"> <div class="overlay"> SKIBI </div> </button>
+      <button id="category" class="projects one" style="background-image: url(./images/SKIBI.png);"> <div class="overlay"> SKIBI </div> </button>
 
-      <button id="category" class="projects two"> <div class="overlay"> Misc </div> </button>
+      <button id="category" class="projects two" style="background-image: url(./images/doomsdayblr.png);"> <div class="overlay"> Misc </div> </button>
 
 
 
