--- a/projects.html
+++ b/projects.html
@@ -49,7 +49,7 @@
 
       <button id="category" class="projects one" style="background-image: url(./images/SKIBI.png);"> <div class="overlay"> SKIBI </div> </button>
 
-      <button id="category" class="projects two" style="background-image: url(./images/doomsdayblr.png);"> <div class="overlay"> Misc </div> </button>
+      <button id="category" class="projects two" style="background-image: url(./images/Doomsdayblr.png);"> <div class="overlay"> Misc </div> </button>
 
 
 
