--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		</div>
 
 		<div class="bio" >
-			<a href="index.html" alt="Angas Smith"><img id="av" class="logo" src="images/" /></a>
+			<a href="index.html" alt="Angas Smith"><img id="av" class="logo" src="images/self.png" /></a>
 
 			<div class="biotext">Hi, I'm Angas Smith!<br> I'm a User Experience Designer <br> I like to work on games/web/mobile <br>
 				Currently designing at <a href="https://staff.flinders.edu.au/workplace-support/digital-services/service-one">flinders &#x21E2;</a><br>
@@ -74,7 +74,7 @@
 		</div>
 
 		<div class="resumecontainer" >
-				<a href="./images/PlantAR_icon.png" download="AngasSmith_resume" class="resume"> download résumé</a>
+				<a href="./images/AngasSmith_resume.docx" download="AngasSmith_resume" class="resume"> download résumé</a>
 		</div>
 
 </html>
