Image resize + badge

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 
 			<div class="navbox">
 				<a href="https://www.linkedin.com/in/angas-smith-002822120"><img src="images/01.png"></a>
+				<a href="https://www.scrum.org/certificates/505369"><img src="images/psui.png"></a>
+
 
 			</div>
 		</div>
