--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		</div>
 
 		<div class="resumecontainer" >
-				<a href="./images/AngasSmith_resume.docx" download="AngasSmith_resume" class="resume"> download résumé</a>
+				<a href="./images/AngasSmith_resume.pdf" download="AngasSmith_resume" class="resume"> download résumé</a>
 		</div>
 
 </html>
