--- a/projects.html
+++ b/projects.html
@@ -43,13 +43,13 @@
 
       <button id="category" id="two" class="projects two" style="background-image: url(./images/Knowious_1.png);"> <div class="overlay" > Knowious </div> </button>
 
-      <button id="category" class="projects one" style="background-image: url(./images/experience.png);"> <div class="overlay"> Experience </div> </button>
+      <button id="category" class="projects one" style="background-image: url(./images/experience.png);"> <div class="overlay"> Games </div> </button>
 
-      <button id="category" class="projects two" style="background-image: url(./images/ETP.png);"> <div class="overlay"> Escape the Probe </div> </button>
+      <button id="category" class="projects two" style="background-image: url(./images/ETP.png);"> <div class="overlay"> Games </div> </button>
 
-      <button id="category" class="projects one" style="background-image: url(./images/SKIBI.png);"> <div class="overlay"> SKIBI </div> </button>
+      <button id="category" class="projects one" style="background-image: url(./images/SKIBI.png);"> <div class="overlay"> Games </div> </button>
 
-      <button id="category" class="projects two" style="background-image: url(./images/Doomsdayblr.png);"> <div class="overlay"> Misc </div> </button>
+      <button id="category" class="projects two" style="background-image: url(./images/Doomsdayblr.png);"> <div class="overlay"> Games </div> </button>
 
 
 
