--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<a href="index.html" alt="Angas Smith"><img id="av" class="logo" src="images/self.png" /></a>
 
 			<div class="biotext">Hi, I'm Angas Smith!<br> I'm a User Experience Designer <br> I like to work on games/web/mobile <br>
-				Currently designing at <a href="https://staff.flinders.edu.au/workplace-support/digital-services/service-one">flinders &#x21E2;</a><br>
+				Previously designing <a href="https://staff.flinders.edu.au/workplace-support/digital-services/service-one">ServiceOne &#x21E2;</a><br>
 			</div>
 
 			<div class="navbox">
@@ -54,10 +54,10 @@
 
 		<div class="toolkit">
 			<h1> My Toolkit </h1><br>
-			<p> I am a proponent of User Experience like to utilise the Design Thinking.
-				 	I like to practise scrum and have completed scrum-master training.
-					I have recently completed a Bachelor of Design and Technology Innovation (Computer Science). <br>
-					My skillset sits somewhere between technical and design. <br><br></p>
+			<p> I am a proponent of Lean UX and Design as a presence on every agile time.<br><br>
+					I have a Professional Scrum with User Experience (PSU I) certification from scrum.org and a Bachelor of Design and Technology Innovation (Computer Science) from Flinders University.<br><br>
+					With a strong design skillset and a techical backbone, I am a great fit for any cross-functional team.<br>
+					 <br><br></p>
 			<div class="parenttools">
 				<ul><h2><u>Technical</u></h2>
 					<li>HTML/CSS
@@ -66,10 +66,10 @@
 					<li>ServiceNow
 				</ul>
 				<ul><h2><u>Design</u></h2>
-					<li> XD/Illustrator/Photoshop
-					<li> Unity
-					<li> Blender
-					<li> Zbrush
+					<li> Adobe Suite
+					<li> Wireframing / Proptotyping
+					<li> Game Engines
+					<li> 3D modelling/sculpting
 				</ul>
 			</div>
 			<br>
