--- a/projects.html
+++ b/projects.html
@@ -41,15 +41,15 @@
 		<div class="categories">
 			<button id="category" id="one" class="projects one" style="background-image: url(./images/Catalogueone.png);"> <div class="overlay" > Service One </div> </button>
 
-      <button id="category" id="two" class="projects two" style="background-image: url(./images/Knowious_1.png);"> <div class="overlay" > Knowious </div> </button>
+      <button id="category" id="two" class="projects two" style="background-image: url(./images/Knowious_1.png);"> <div class="overlay" > Personal </div> </button>
 
       <button id="category" class="projects one" style="background-image: url(./images/experience.png);"> <div class="overlay"> Games </div> </button>
 
-      <button id="category" class="projects two" style="background-image: url(./images/ETP.png);"> <div class="overlay"> Games </div> </button>
+    <!-- <button id="category" class="projects two" style="background-image: url(./images/ETP.png);"> <div class="overlay"> Games </div> </button>
 
       <button id="category" class="projects one" style="background-image: url(./images/SKIBI.png);"> <div class="overlay"> Games </div> </button>
 
-      <button id="category" class="projects two" style="background-image: url(./images/Doomsdayblr.png);"> <div class="overlay"> Games </div> </button>
+      <button id="category" class="projects two" style="background-image: url(./images/Doomsdayblr.png);"> <div class="overlay"> Games </div> </button> -->
 
 
 
